--- a/.github/workflows/unit_test.yml
+++ b/.github/workflows/unit_test.yml
@@ -1,4 +1,4 @@
-name: unit-test
+name: unit_test
 
 on:
   pull_request:
@@ -6,14 +6,14 @@ on:
   push:
     branches:
       - develop
-
 jobs:
   unit_test:
     name: flutter unit test
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: set up repository
-        uses: actions/chekout@v2
+        uses: actions/checkout@v2
       - name: set up java
         uses: actions/setup-java@v1
         with:
