refc: change group

--- a/.github/workflows/android_cide.yml
+++ b/.github/workflows/android_cide.yml
@@ -42,5 +42,5 @@ jobs:
         with:
           appId: ${{secrets.FIREBASE_ANDROID_APP_ID}}
           token: ${{secrets.FIREBASE_APP_TOKEN}}
-          groups: company
+          groups: tester
           file: ./build/app/outputs/apk/release/app-release.apk
