--- a/.github/workflows/android_cide.yml
+++ b/.github/workflows/android_cide.yml
@@ -1,11 +1,10 @@
 name: android_cicd
 
 on:
-  pull_request:
-    types: [opened, synchronize]
-  push:
-    branches:
-      - develop
+  release:
+    types:
+      - created
+
 jobs:
   build:
     runs-on: ubuntu-latest
